Eliminate background on narrow front page.  Temp fix until solved by applying the background only to participants on the session page.

--- a/css/caarms.css
+++ b/css/caarms.css
@@ -30,6 +30,11 @@ body {
   background-color: #ffeecd;
 }
 
+@media (max-width: 720px) {
+  .path-frontpage .view-all-sessions .panelist-photo {
+    background-image: none;
+  }
+}
 .path-frontpage .view-all-sessions .session-info-combined {
   flex-shrink: 0;
   background: white;
